# scrabble-vision

./: .gitignore  README.md  augment_tiles.py  corners.npy  evaluate.py  extract_tiles.py  generate_tiles.py  main.py  pyproject.toml  retrain.bat  scan.py  server.py  start_mobile.bat  train.py
assets/: adjust_images.py
config/: default.json
data/eval/corners/: eval_board.npy
data/eval/ground_truth/: eval_board.txt
data/raw_boards/corners/: board_001.npy  board_002.npy  board_003.npy
data/raw_boards/ground_truth/: board_001.txt  board_002.txt  board_003.txt
models/: tile_classifier.onnx  tile_classifier.onnx.data  tile_classifier.pt
src/classification/: model.py
src/detection/: grid_detect.py  tile_detect.py
web/: edit-corners.html  index.html
